# project2_borovinskikh_kirill_m25_555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
docs/: demo.cast  index.html
src/primitive_db/: core.py  decorators.py  engine.py  main.py  utils.py
